# mineru-app

./: .gitignore  README.md  make_sample_pdf.py  mineru_preprocess.py  pyproject.toml
src/mineru_app/: __init__.py  __main__.py  export.py  jobs.py  processing.py  server.py  store.py
src/mineru_app/static/: app.css  app.js  index.html
