[project]
name = "mineru-app"
version = "0.1.0"
description = "Local drag-and-drop web app for preprocessing PDFs (and other docs) into Markdown + structured JSON with MinerU."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mineru[core]>=2.5",
    # Direct deps of the web server (also pulled in transitively by mineru, but
    # declared explicitly since we import them).
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    # Declared directly (not just via mineru) so the [tool.uv.sources] Windows
    # CUDA index override below applies — uv sources only affect direct deps.
    "torch>=2.6",
    "torchvision",
]

[project.scripts]
mineru-app = "mineru_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru_app"]

# PyPI's Windows torch wheels are CPU-only; pull CUDA builds from the PyTorch
# index on Windows. Linux PyPI wheels already bundle CUDA; macOS wheels do MPS.
# CUDA wheels still run on CPU-only Windows machines (just a bigger download).
[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
